# HSE-ABC-OS-course

./: README.md
IDZ1/: IOmacroslib.asm  README.md  arraymacroslib  arraymacroslib.asm  main.asm  program.asm  tester.asm
IDZ2/: IDZChecking.ipynb  README.md  geomlib.asm  iolib.asm  main.asm  program.asm  tester.asm
IDZ3/: README.md  beatlesout.txt  bible out.txt  load-text.s  macro-syscalls.m  main.asm  out.txt  program.asm  qeen.txt  qeenout.txt  string_handler.asm  string_handler.asm 10.04.37  test.txt  tester.asm  testout.txt  testout1.txt
IDZ4/: Administration.cpp  Client.cpp  README.md  Thread.cpp  generate_clients.cpp  out  program.cpp  program_params.h  read_file.cpp  socialistic_hotel  test1.txt  test2.txt
dz1 os/: dz.md
dz2/: a.out  compile_cpp
dz3/: main.c
dz4/: minicp.c  miniecho.c  minitouch.c  out
dz5/: a.out  test.c  test.txt
dz6/: a.out  logs-1  logs-2  main.c  test  tester.c
dz7/: counter  counter.c  forward-list.c
dz8/: counter  counter.c
dz9/: anon-sem.h  post  post.c  txt  wait  wait.c
dz9/my-semaphore/: CMakeLists.txt  CountingSemaphore.cpp  CountingSemaphore.h
dz9/my-semaphore/tests/: stress.cpp  unit.cpp
dzlast/: isolate-template.c
dzpredlast/: a.out  find_treshold.c
idz os 1/: README.md
idz os 2/: README.md
idz os 3/: README.md
idz os 4/: README.md
seminar 1/: OTCHET1.md
seminar 11/: cl1  cl2  client1.c  client2.c  server  server.c
seminar 2/: OTCHET2.md
seminar 3/: OTCHET3.md  README.md  mod10.asm  mod8.asm
seminar 4/: README.md  sum_of_array8.asm  sum_of_array_and_odd10.asm
seminar 5/: README.md  (+2 more)
(+121 files in other folders)
